force-app/main/default/objects/Product2/fields/Unit_of_Measure_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Conversion__c</fullName>
    <description>Number of the product in the stocking unit of measure that make up one Unit of Measure Issued. This is the ICPRIC.MARKUPCONV field in Accpac</description>
    <inlineHelpText>Number of the product in the stocking unit of measure that make up one Unit of Measure Issued. This is the ICPRIC.MARKUPCONV field in Accpac</inlineHelpText>
    <label>Unit of Measure Conversion</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>