force-app/main/default/objects/Product2/fields/UPC_Code__c.field-meta.xml
<CustomField>
    <fullName>UPC_Code__c</fullName>
    <description>Citron Custom Field</description>
    <label>UPC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>