force-app/main/default/objects/Product2/fields/VMI_Product__c.field-meta.xml
<CustomField>
    <fullName>VMI_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VMI Product</label>
    <type>Checkbox</type>
</CustomField>