force-app/main/default/objects/Product2/fields/Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period__c</fullName>
    <label>Warranty Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>