force-app/main/default/objects/Product2/validationRules/CPQ_Enter_Amortization.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Enter_Amortization</fullName>
    <active>true</active>
    <errorConditionFormula>If( TEXT( CPQ_Price_Model__c ) = &apos;Hygiene Pricing Model&apos; &amp;&amp; (  ISBLANK(CPQ_Amortization__c) ), true, false)</errorConditionFormula>
    <errorDisplayField>CPQ_Amortization__c</errorDisplayField>
    <errorMessage>Make sure that Amortization is entered for a Hygiene Pricing Model product.</errorMessage>
</ValidationRule>