force-app/main/default/objects/Product2/validationRules/CPQ_Enter_Capital_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Enter_Capital_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>If( TEXT( CPQ_Price_Model__c ) = &apos;Hygiene Pricing Model&apos; &amp;&amp; (  ISBLANK( CPQ_Capital_Cost__c )  ), true, false)</errorConditionFormula>
    <errorDisplayField>CPQ_Capital_Cost__c</errorDisplayField>
    <errorMessage>Make sure that Capital is entered for a Hygiene Pricing Model product.</errorMessage>
</ValidationRule>