force-app/main/default/objects/Product2/validationRules/CPQ_Enter_Work_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Enter_Work_Type</fullName>
    <active>true</active>
    <errorConditionFormula>If( TEXT( CPQ_Price_Model__c ) = &apos;Hygiene Pricing Model&apos; &amp;&amp; (  ISBLANK( Service_Work_Type__c )  ), true, false)</errorConditionFormula>
    <errorDisplayField>Service_Work_Type__c</errorDisplayField>
    <errorMessage>Make sure that Service Work Type is entered for a Hygiene Pricing Model product.</errorMessage>
</ValidationRule>