force-app/main/default/objects/Product2/validationRules/Follow_Up_Fields_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up_Fields_Validation_Rule</fullName>
    <active>true</active>
    <description>Follow_up_Product__c and Follow_up_After_N_Days__c are interdependent</description>
    <errorConditionFormula>OR( 
 AND( AND(ISCHANGED( Follow_up_After_N_Days__c ), NOT( 
   ISBLANK(Follow_up_After_N_Days__c )) ), 
  ISBLANK( Follow_up_Product__c )), 
 AND( AND(ISCHANGED( Follow_up_Product__c ), 
  NOT(ISBLANK(Follow_up_Product__c ))), 
 ISBLANK( Follow_up_After_N_Days__c ))  
)</errorConditionFormula>
    <errorMessage>Please fill in both the fields &apos;Follow-up After N Days&apos; and &apos;Follow-up Product&apos;.</errorMessage>
</ValidationRule>