force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>French_Description__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Category_Description__c</columns>
    <columns>GL_Title__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Language__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Hygiene</value>
    </filters>
    <label>All Products</label>
</ListView>