force-app/main/default/objects/Product2/listViews/Chemical_Products.listView-meta.xml
<ListView>
    <fullName>Chemical_Products</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Chemical</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Chemical Products</label>
    <language>en_US</language>
    <sharedTo>
        <group>Product_Managers</group>
    </sharedTo>
</ListView>