force-app/main/default/objects/Product2/listViews/Displayed_in_Portal.listView-meta.xml
<ListView>
    <fullName>Displayed_in_Portal</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Icon__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Image_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Display_Record_In_Portal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Displayed in Portal</label>
</ListView>