force-app/main/default/objects/Product2/listViews/Does_not_require_scanning.listView-meta.xml
<ListView>
    <fullName>Does_not_require_scanning</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Does_not_require_scanning__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>ExternalID__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Does_not_require_scanning__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Does not require scanning</label>
    <language>en_US</language>
    <sharedTo>
        <group>Product_Managers</group>
    </sharedTo>
</ListView>