force-app/main/default/objects/Product2/listViews/English_Products.listView-meta.xml
<ListView>
    <fullName>English_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Category_Description__c</columns>
    <columns>GL_Title__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Language__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_ENABLED</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>English</value>
    </filters>
    <label>English Products</label>
</ListView>