force-app/main/default/objects/Product2/listViews/Matting_Linens_Services.listView-meta.xml
<ListView>
    <fullName>Matting_Linens_Services</fullName>
    <booleanFilter>(1 AND 2) OR 3</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>Category_Description__c</columns>
    <columns>ExternalID__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExternalID__c</field>
        <operation>startsWith</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Category_Description__c</field>
        <operation>contains</operation>
        <value>Linen,Mat</value>
    </filters>
    <filters>
        <field>ExternalID__c</field>
        <operation>startsWith</operation>
        <value>1-11-3,1-43</value>
    </filters>
    <label>Matting &amp; Linens Services</label>
    <language>en_US</language>
    <sharedTo>
        <group>Product_Managers</group>
    </sharedTo>
</ListView>