force-app/main/default/objects/Product2/listViews/Never_Generates_Work_Order.listView-meta.xml
<ListView>
    <fullName>Never_Generates_Work_Order</fullName>
    <columns>Never_Generate_Work_Order__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.EXTERNAL_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Never_Generate_Work_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Never Generates Work Order</label>
    <language>en_US</language>
    <sharedTo>
        <group>Product_Managers</group>
    </sharedTo>
</ListView>