force-app/main/default/objects/Product2/listViews/No_Work_Type_Service.listView-meta.xml
<ListView>
    <fullName>No_Work_Type_Service</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Service_Work_Type__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Item_Type__c</columns>
    <columns>Language__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Work_Type__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>French_Product_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <label>No Work Type (Service)</label>
</ListView>