force-app/main/default/objects/Product2/listViews/Pest_Chemical_Applied.listView-meta.xml
<ListView>
    <fullName>Pest_Chemical_Applied</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ID_Casesafe__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Active_Ingredients__c</columns>
    <columns>Active_Ingredient_percentage__c</columns>
    <columns>P_C_P__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>PEST</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pest Chemical Applied</label>
    <sharedTo>
        <group>Product_Managers</group>
    </sharedTo>
</ListView>