force-app/main/default/objects/Product2/listViews/Product_Name_Cleanup.listView-meta.xml
<ListView>
    <fullName>Product_Name_Cleanup</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>day,days</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>1</value>
    </filters>
    <label>Product Name Cleanup</label>
    <language>en_US</language>
    <sharedTo>
        <group>Product_Managers</group>
    </sharedTo>
</ListView>