force-app/main/default/objects/Product2/listViews/Products_with_Images.listView-meta.xml
<ListView>
    <fullName>Products_with_Images</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Image__c</columns>
    <columns>Product_Image_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Image_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Products with Images</label>
</ListView>