force-app/main/default/objects/Product2/listViews/Related_Products.listView-meta.xml
<ListView>
    <fullName>Related_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Available_As_Related_Product__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_As_Related_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Related Products</label>
    <language>en_US</language>
</ListView>