force-app/main/default/objects/Product2/listViews/VMI_Products.listView-meta.xml
<ListView>
    <fullName>VMI_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>UPC_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VMI_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>VMI Products</label>
    <sharedTo>
        <group>Product_Managers</group>
    </sharedTo>
</ListView>